--- a/Sections/exp.tex
+++ b/Sections/exp.tex
@@ -69,7 +69,7 @@ The table below presents a comparison of the performance of each model across di
       \hline
       \textbf{Llama3-3B}    & \textbf{Gemini} & \textbf{Qwen2-3B} \\ \hline
 
-         &  & \\ \hline 
+         & 0.86 & 0.58\\ \hline 
 
   \end{tabular}
   \caption{Comparison of models by accuracy.}
