--- a/Sections/exp.tex
+++ b/Sections/exp.tex
@@ -69,9 +69,13 @@ The table below presents a comparison of the performance of each model across di
       \hline
       \textbf{Llama3-3B}    & \textbf{Gemini} & \textbf{Qwen2-3B} \\ \hline
 
-         & 0.86 & 0.58\\ \hline 
+        0.64 & 0.86 & 0.58\\ \hline 
 
   \end{tabular}
   \caption{Comparison of models by accuracy.}
   \label{tab:model_comparison}
 \end{table}
+
+The table presented the comparative performance of the three models: Llama3-3B, Gemini, and Qwen2-3B on a commonsense reasoning task using 50 questions from the ConceptNet dataset's test set. Gemini outperforms the other models with an accuracy of 0.86, showcasing superior commonsense reasoning capabilities. Llama3-3B achieves a competitive 0.64, while Qwen2-3B follows with 0.58, indicating reasonable performance but a notable gap compared to Gemini.
+They emphasize the strength of Gemini in leveraging commonsense knowledge effectively, while Llama3-3B and Qwen2-3B demonstrate moderate abilities with room for improvement. 
+The results highlights the potential of advancing model architectures and training methods to bridge the gap in reasoning capabilities, paving the way for more robust and accurate language models in the future.
